# jupyter-pandoc-latex-remotecontainer

./: .gitignore  .gitmodules  LICENSE
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
project-x/: .textlintrc  README.md  pyproject.toml
project-x/tests/: test_project_x.py
