[tool.poetry]
name = "project-x"
version = "0.1.0"
description = ""
authors = ["spadr <mogumogu@email.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
